--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1651,6 +1651,9 @@ table.cart .cart-item-row .qty-input {
 	padding-top: 10px;
 	border-top: 1px solid #d7d7d7;
 }
+.checkout-data .order-completed .select-button {
+    padding-top: 15px;
+}
 
 .checkout-data .shipping-option-item,
 .checkout-data .payment-method-item {
