--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -344,7 +344,7 @@
                 @Html.SmartLabelFor(model => model.ShowColorSquaresInLists)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.ShowColorSquaresInLists)
+                @Html.SettingEditorFor(model => model.ShowColorSquaresInLists)
                 @Html.ValidationMessageFor(model => model.ShowColorSquaresInLists)
             </td>
         </tr>
