--- a/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
+++ b/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
@@ -22,6 +22,7 @@
                     )
                     .Columns(columns =>
                     {
+						columns.Bound(x => x.StoreName).ReadOnly();
                         columns.Bound(x => x.CountryName).ReadOnly();
                         columns.Bound(x => x.StateProvinceName).ReadOnly();
                         columns.Bound(x => x.Zip);
@@ -138,6 +139,15 @@
     <fieldset>
         <legend><span>@T("Plugins.Shipping.ByTotal.AddNewRecordTitle")</span></legend>
         <table class="adminContent">
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.AddStoreId)
+				</td>
+				<td class="adminData">
+					@Html.DropDownListFor(model => model.AddStoreId, Model.AvailableStores)
+					@Html.ValidationMessageFor(model => model.AddStoreId)
+				</td>
+			</tr>
             <tr>
                 <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.AddCountryId)
@@ -242,7 +252,7 @@
                     &nbsp;
                 </td>
                 <td>
-                    <button type="button" id="addshippingbytotalrecord" class="btn btn-warning" style="margin-top: 10px">
+                    <button type="button" id="addshippingbytotalrecord" class="btn btn-primary" style="margin-top: 10px">
                         <i class="icon-plus"></i>
                         @T("Common.AddNew")
                     </button>
@@ -284,9 +294,11 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="2">
-                    <button type="button" id="savegeneralsettings" class="btn">
-                        @T("Admin.Common.Save")</button>
+				<td>&nbsp;</td>
+				<td style="padding:10px 0">
+                    <button type="button" id="savegeneralsettings" class="btn btn-primary">
+                        <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
+                    </button>
                 </td>
             </tr>
         </table>
