#10 Layout issue in 'forum > active threads'

--- a/src/Presentation/SmartStore.Web/Views/Boards/_ActiveTopics.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/_ActiveTopics.cshtml
@@ -39,7 +39,7 @@
             }
         </div>
     </div>
-    <div class="active-discussionstopics">
+    <div class="active-discussionstopics clearfix">
         <table class="table">
             @if (Model.ForumTopics.Count > 0)
             {
